GJES-349 - Fix line breaks in grid cells.

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -927,7 +927,7 @@ md-checkbox .md-icon {
         margin: 0;
         dt, dd {
           padding: 10px;
-          word-break: break-all;
+          overflow-wrap: break-word;
         }
         dd.no-padding {
           padding: 2px;
